@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-07-30T01:17:25Z",
-  "count_outdated" : 5190,
-  "uniques_outdated" : 2822,
+  "timestamp" : "2025-07-30T12:32:30Z",
+  "count_outdated" : 5192,
+  "uniques_outdated" : 2823,
   "count" : 5225,
   "uniques" : 2854,
   "clones" : [
-    {
-      "timestamp": "2025-07-16T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-07-17T00:00:00Z",
       "count": 2,
