@@ -1,12 +1,7 @@
 {
-  "count": 34,
+  "count": 33,
   "uniques": 15,
   "clones": [
-    {
-      "timestamp": "2025-07-16T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-07-17T00:00:00Z",
       "count": 2,
